--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <!-- Gallery Section -->
 <section class="gallery">
   <div class="art-card">
-    <img src="/images/1.jpg" alt="Art 1">
+    <img src="/I-ArtWorks/images/1.jpg" alt="Art 1">
     <div class="overlay">
       <h3>Geometric Dreams</h3>
       <p>Alex Noir</p>
@@ -80,7 +80,7 @@
   </div>
 
   <div class="art-card">
-    <img src="/images/2.jpg" alt="Art 2">
+    <img src="/I-ArtWorks/images/2.jpg" alt="Art 2">
     <div class="overlay">
       <h3>Ocean Bliss</h3>
       <p>Maria Lee</p>
@@ -88,7 +88,7 @@
   </div>
 
   <div class="art-card">
-    <img src="/images/3.jpg" alt="Art 3">
+    <img src="/I-ArtWorks/images/3.jpg" alt="Art 3">
     <div class="overlay">
       <h3>Golden Horizon</h3>
       <p>Kai Tanaka</p>
@@ -96,7 +96,7 @@
   </div>
 
   <div class="art-card">
-    <img src="/images/4.jpg" alt="Art 4">
+    <img src="/I-ArtWorks/images/4.jpg" alt="Art 4">
     <div class="overlay">
       <h3>Silent Forest</h3>
       <p>Elena Rossi</p>
