--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <!-- Header -->
    <header>
       <div class="logo_container">
-        <a href="#"><img class="Imax_home" src="/images/logo.png" alt="Imax"></a>
+        <a href="#"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="Imax"></a>
       </div>
       <nav class="nav_bar">
         <a href="#">Gallery</a>
@@ -30,7 +30,7 @@
           <span class="material-symbols-outlined action_icon">person</span>
           <span class="action_name">Profile</span>
         </a>
-        <a class="action_container" href="/pages/bag.html">
+        <a class="action_container" href="pages/bag.html">
           <span class="material-symbols-outlined action_icon">shopping_bag</span>
           <span class="action_name">Bag</span>
           <span class="bag-item-count" >0</span>
