--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <!-- Header -->
    <header>
       <div class="logo_container">
-        <a href="#"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="Imax"></a>
+        <a href="#"><img class="Imax_home" src="/I-ArtWorks/I-ArtWorks/images/logo.png" alt="Imax"></a>
       </div>
       <nav class="nav_bar">
         <a href="#">Gallery</a>
