--- a/pages/bag.html
+++ b/pages/bag.html
@@ -3,7 +3,7 @@
 <head>
     <title>myntra bag</title>
 
-    <link rel="stylesheet" href="/css/bag.css"/>
+    <link rel="stylesheet" href="./css/bag.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -11,7 +11,7 @@
    <!-- Header -->
    <header>
       <div class="logo_container">
-        <a href="/index.html"><img class="Imax_home" src="/images/logo.png" alt="Imax"></a>
+        <a href="/index.html"><img class="Imax_home" src="https://imtiyaz-sir.github.io/I-ArtWorks/images/logo.png" alt="Imax"></a>
       </div>
       <nav class="nav_bar">
         <a href="#">Gallery</a>
