--- a/pages/bag.html
+++ b/pages/bag.html
@@ -76,8 +76,8 @@
     </div>
   </div>
     </footer>
-    <script src="/data/artworks.js"></script>
-<script src="/script/index.js"></script>
-    <script src="/script/bag.js"></script>
+    <script src="../data/artworks.js"></script>
+<script src="../script/index.js"></script>
+    <script src="../script/bag.js"></script>
 </body>
 </html>
