--- a/pages/commission.html
+++ b/pages/commission.html
@@ -158,8 +158,8 @@
     </div>
   </div>
     </footer>
-    <script src="/data/artworks.js"></script>
-<script src="/script/index.js"></script>
-    <script src="/script/bag.js"></script>
+    <script src="../data/artworks.js"></script>
+<script src="../script/index.js"></script>
+    <script src="../script/bag.js"></script>
 </body>
 </html>
