--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <nav class="nav_bar">
         <a href="#">Gallery</a>
-        <a href="/pages/commission.html">Commissions</a>
+        <a href="pages/commission.html">Commissions</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
