--- a/pages/commission.html
+++ b/pages/commission.html
@@ -4,7 +4,7 @@
     <title>myntra bag</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    <link rel="stylesheet" href="/css/bag.css"/>
+    <link rel="stylesheet" href="../css/bag.css"/>
     <link rel="stylesheet" href="/css/commission.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -160,6 +160,6 @@
     </footer>
     <script src="../data/artworks.js"></script>
 <script src="../script/index.js"></script>
-    <script src="../script/bag.js"></script>
+    <script src="/script/bag.js"></script>
 </body>
 </html>
