--- a/pages/commission.html
+++ b/pages/commission.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <link rel="stylesheet" href="../css/bag.css"/>
-    <link rel="stylesheet" href="/css/commission.css">
+    <link rel="stylesheet" href="../css/commission.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -13,7 +13,7 @@
    <!-- Header -->
    <header>
       <div class="logo_container">
-        <a href="/index.html"><img class="Imax_home" src="/images/logo.png" alt="Imax"></a>
+        <a href="/index.html"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="Imax"></a>
       </div>
       <nav class="nav_bar">
         <a href="#">Gallery</a>
@@ -33,7 +33,7 @@
           <span class="material-symbols-outlined action_icon">person</span>
           <span class="action_name">Profile</span>
         </a>
-        <a class="action_container" href="/pages/bag.html">
+        <a class="action_container" href="pages/bag.html">
           <span class="material-symbols-outlined action_icon">shopping_bag</span>
           <span class="action_name">Bag</span>
           <span class="bag-item-count">0</span>
