--- a/pages/bag.html
+++ b/pages/bag.html
@@ -11,11 +11,11 @@
    <!-- Header -->
    <header>
       <div class="logo_container">
-        <a href="/index.html"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="Imax"></a>
+        <a href="./index.html"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="Imax"></a>
       </div>
       <nav class="nav_bar">
         <a href="#">Gallery</a>
-        <a href="pages/commission.html">Commissions</a>
+        <a href="commission.html">Commissions</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
