--- a/pages/commission.html
+++ b/pages/commission.html
@@ -13,7 +13,7 @@
    <!-- Header -->
    <header>
       <div class="logo_container">
-        <a href="./index.html"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="Imax"></a>
+        <a href="../index.html"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="Imax"></a>
       </div>
       <nav class="nav_bar">
         <a href="#">Gallery</a>
@@ -160,6 +160,6 @@
     </footer>
     <script src="../data/artworks.js"></script>
 <script src="../script/index.js"></script>
-    <script src="/script/bag.js"></script>
+    <script src="../script/bag.js"></script>
 </body>
 </html>
