--- a/index.html
+++ b/index.html
@@ -39,7 +39,20 @@
    </header>
 
    <!-- Main Section -->
+   <section class="hero-section">
+  <video autoplay muted loop playsinline class="hero-video">
+    <source src="videos/art-background.mp4" type="video/mp4">
+    <!-- fallback image -->
+    <img src="images/hero-fallback.jpg" alt="Art gallery background">
+  </video>
+  <div class="hero-overlay">
+    <h1>Extraordinary Art</h1>
+    <p>That Speaks to Your Soul</p>
+    <a href="#gallery" class="hero-button">Explore Collection</a>
+  </div>
+</section>
    <main>
+     
       <div class="content">
         <div class="original">
           <span>🎨 Curated Original Collection</span>
