--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
    <!-- Main Section -->
    <section class="hero-section">
   <video autoplay muted loop playsinline class="hero-video">
-    <source src="videos/art-background.mp4" type="video/mp4">
+    <source src="/images/SnapInsta.to_AQP_hecCdGrKJ8yUGdV4LjcsZV4eMeMZz6twttm54U67uKHvpNSW-IKh_3tTLYzM8icS-108RaWUD8JLGDknbq0Qnf8-8kvWZtAbTnw.mp4" type="video/mp4">
     <!-- fallback image -->
-    <img src="images/hero-fallback.jpg" alt="Art gallery background">
+    <img src="/I-ArtWorks/images/1.jpg" alt="Art gallery background">
   </video>
   <div class="hero-overlay">
     <h1>Extraordinary Art</h1>
