--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    <!-- Main Section -->
    <section class="hero-section">
   <video autoplay muted loop playsinline class="hero-video">
-    <source src="/images/SnapInsta.to_AQP_hecCdGrKJ8yUGdV4LjcsZV4eMeMZz6twttm54U67uKHvpNSW-IKh_3tTLYzM8icS-108RaWUD8JLGDknbq0Qnf8-8kvWZtAbTnw.mp4" type="video/mp4">
+    <source src="/I-ArtWorks/images/SnapInsta.to_AQP_hecCdGrKJ8yUGdV4LjcsZV4eMeMZz6twttm54U67uKHvpNSW-IKh_3tTLYzM8icS-108RaWUD8JLGDknbq0Qnf8-8kvWZtAbTnw.mp4" type="video/mp4">
     <!-- fallback image -->
     <img src="/I-ArtWorks/images/1.jpg" alt="Art gallery background">
   </video>
