--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Art Gallery</title>
+  <title>I-ArtWorks | Extraordinary Art Gallery</title>
+  <meta name="description" content="Discover and collect extraordinary artwork from talented artists worldwide. Original pieces, free shipping, and authentic artist-verified collections.">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
@@ -13,46 +14,45 @@
    <!-- Header -->
    <header>
       <div class="logo_container">
-        <a href="#"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="Imax"></a>
+        <a href="#"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="I-ArtWorks"></a>
       </div>
       <nav class="nav_bar">
-        <a href="#">Gallery</a>
-        <a href="pages/commission.html">Commissions</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="#gallery">Gallery</a>
+        <a href="/pages/commission.html">Commissions</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
       </nav>
       <div class="action_bar">
-        <a class="action_container" href="#">
+        <a class="action_container" href="#" id="wishlistBtn">
           <span class="material-symbols-outlined action_icon">favorite</span>
           <span class="action_name">Wishlist</span>
         </a>
-        <a class="action_container" href="#">
+        <a class="action_container" href="#" id="profileBtn">
           <span class="material-symbols-outlined action_icon">person</span>
           <span class="action_name">Profile</span>
         </a>
         <a class="action_container" href="pages/bag.html">
           <span class="material-symbols-outlined action_icon">shopping_bag</span>
           <span class="action_name">Bag</span>
-          <span class="bag-item-count" >0</span>
+          <span class="bag-item-count">0</span>
         </a>
       </div>
    </header>
 
-   <!-- Main Section -->
+   <!-- Hero Section -->
    <section class="hero-section">
-  <video autoplay muted loop playsinline class="hero-video">
-    <source src="/I-ArtWorks/images/SnapInsta.to_AQP_hecCdGrKJ8yUGdV4LjcsZV4eMeMZz6twttm54U67uKHvpNSW-IKh_3tTLYzM8icS-108RaWUD8JLGDknbq0Qnf8-8kvWZtAbTnw.mp4" type="video/mp4">
-    <!-- fallback image -->
-    <img src="/I-ArtWorks/images/1.jpg" alt="Art gallery background">
-  </video>
-  <div class="hero-overlay">
-    <h1>Extraordinary Art</h1>
-    <p>That Speaks to Your Soul</p>
-    <a href="#gallery" class="hero-button">Explore Collection</a>
-  </div>
-</section>
+      <video autoplay muted loop playsinline class="hero-video">
+        <source src="/I-ArtWorks/images/SnapInsta.to_AQP_hecCdGrKJ8yUGdV4LjcsZV4eMeMZz6twttm54U67uKHvpNSW-IKh_3tTLYzM8icS-108RaWUD8JLGDknbq0Qnf8-8kvWZtAbTnw.mp4" type="video/mp4">
+        <img src="/I-ArtWorks/images/1.jpg" alt="Art gallery background">
+      </video>
+      <div class="hero-overlay">
+        <h1>Extraordinary Art</h1>
+        <p>That Speaks to Your Soul</p>
+        <a href="#gallery" class="hero-button">Explore Collection</a>
+      </div>
+   </section>
+
    <main>
-     
       <div class="content">
         <div class="original">
           <span>🎨 Curated Original Collection</span>
@@ -71,8 +71,8 @@
 
         <!-- Buttons -->
         <div class="btns">
-          <button class="exp" type="submit">Explore Collection</button>
-          <button class="view" type="submit">View Gallery</button>
+          <button class="exp" type="button" onclick="scrollToGallery()">Explore Collection</button>
+          <button class="view" type="button" onclick="scrollToGallery()">View Gallery</button>
         </div>
 
         <!-- Badges -->
@@ -82,148 +82,208 @@
           <div class="badge">✔️ Artist Verified <br><small>Curated selection</small></div>
         </div>
 
-<!-- Gallery Section -->
-<section class="gallery">
-  <div class="art-card">
-    <img src="/I-ArtWorks/images/1.jpg" alt="Art 1">
-    <div class="overlay">
-      <h3>Geometric Dreams</h3>
-      <p>Alex Noir</p>
-    </div>
-  </div>
+        <!-- Preview Gallery Section -->
+        <section class="gallery">
+          <div class="art-card">
+            <img src="/I-ArtWorks/images/1.jpg" alt="Geometric Dreams">
+            <div class="overlay">
+              <h3>Geometric Dreams</h3>
+              <p>Alex Noir</p>
+            </div>
+          </div>
 
-  <div class="art-card">
-    <img src="/I-ArtWorks/images/2.jpg" alt="Art 2">
-    <div class="overlay">
-      <h3>Ocean Bliss</h3>
-      <p>Maria Lee</p>
-    </div>
-  </div>
+          <div class="art-card">
+            <img src="/I-ArtWorks/images/2.jpg" alt="Ocean Bliss">
+            <div class="overlay">
+              <h3>Ocean Bliss</h3>
+              <p>Maria Lee</p>
+            </div>
+          </div>
 
-  <div class="art-card">
-    <img src="/I-ArtWorks/images/3.jpg" alt="Art 3">
-    <div class="overlay">
-      <h3>Golden Horizon</h3>
-      <p>Kai Tanaka</p>
-    </div>
-  </div>
+          <div class="art-card">
+            <img src="/I-ArtWorks/images/3.jpg" alt="Golden Horizon">
+            <div class="overlay">
+              <h3>Golden Horizon</h3>
+              <p>Kai Tanaka</p>
+            </div>
+          </div>
 
-  <div class="art-card">
-    <img src="/I-ArtWorks/images/4.jpg" alt="Art 4">
-    <div class="overlay">
-      <h3>Silent Forest</h3>
-      <p>Elena Rossi</p>
-    </div>
-  </div>
-</section>
-<!-- Featured Artwork Section -->
-<section class="featured-artwork">
-  <h2>Featured Artwork</h2>
-  <p>Discover our carefully curated selection of premium artwork from talented artists around the world.</p>
-  <section class="artwork-collection">
-    <div class="collection-header">
-          <h3>Artwork Collection</h3>
+          <div class="art-card">
+            <img src="/I-ArtWorks/images/4.jpg" alt="Silent Forest">
+            <div class="overlay">
+              <h3>Silent Forest</h3>
+              <p>Elena Rossi</p>
+            </div>
+          </div>
+        </section>
 
-    <div class="collection-controls">
-      <button class="control-btn"><span class="material-symbols-outlined">grid_view</span></button>
-      <button class="control-btn"><span class="material-symbols-outlined">list</span></button>
-      <button class="control-btn"><span class="material-symbols-outlined">filter</span></button>
-    </div>
-    </div>
+        <!-- Featured Artwork Section -->
+        <section class="featured-artwork" id="gallery">
+          <h2>Featured Artwork</h2>
+          <p>Discover our carefully curated selection of premium artwork from talented artists around the world.</p>
+          
+          <section class="artwork-collection">
+            <div class="collection-header">
+              <h3>Artwork Collection</h3>
+              <div class="collection-controls">
+                <button class="control-btn" id="gridBtn" title="Grid View">
+                  <span class="material-symbols-outlined">grid_view</span>
+                </button>
+                <button class="control-btn" id="listBtn" title="List View">
+                  <span class="material-symbols-outlined">list</span>
+                </button>
+                <button class="control-btn" id="filterBtn" title="Filter">
+                  <span class="material-symbols-outlined">filter_list</span>
+                </button>
+              </div>
+            </div>
+            <p><span id="artworkCount">0</span> masterpieces waiting to be discovered</p>
+          </section>
 
-      <p>6 masterpieces waiting to be discovered</p>
-  </section>
+          <div class="art-grid grid-view"></div>
+        </section>
 
-      <div class="art-grid">
-   
-      </div>
-</section>
-<section class="about-gallery">
-  <h2>About Our Gallery</h2>
-  <p>
-    We believe that the finest art evokes emotion, inspires and touches hearts. Our gallery showcases original works from emerging and established artists, each piece carefully selected for its unique voice and exceptional skill.
-  </p>
-  <p>
-    Discover masterpieces which could elevate any interior and satisfy art connoisseurs, providing a portal for artistic excellence and inspiration. Whether you’re just starting your collection or expanding, explore the beauty of art on our platform.
-  </p>
-  <div class="gallery-stats">
-    <div class="stat-item"><span class="stat-number">500+</span> Artworks</div>
-    <div class="stat-item"><span class="stat-number">150+</span> Artists</div>
-    <div class="stat-item"><span class="stat-number">5000+</span> Gallery Visitors</div>
-  </div>
-</section>
+        <!-- About Section -->
+        <section class="about-gallery" id="about">
+          <h2>About I-ArtWorks</h2>
+          <p>
+            Welcome to I-ArtWorks, where passion meets creativity. Founded by Imtiyaz, our gallery is dedicated to showcasing exceptional artwork from emerging and established artists around the globe.
+          </p>
+          <p>
+            We believe that the finest art evokes emotion, inspires and touches hearts. Our gallery showcases original works from talented artists, each piece carefully selected for its unique voice and exceptional skill.
+          </p>
+          <p>
+            Discover masterpieces that could elevate any interior and satisfy art connoisseurs. Whether you're just starting your collection or expanding it, explore the beauty of art on our platform.
+          </p>
+          <div class="gallery-stats">
+            <div class="stat-item">
+              <span class="stat-number">500+</span> 
+              <span>Artworks</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-number">150+</span> 
+              <span>Artists</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-number">5000+</span> 
+              <span>Happy Collectors</span>
+            </div>
+          </div>
+        </section>
 
-<footer class="site-footer">
-  <div class="footer-main">
-    <div class="footer-col brand-info">
-      <div class="footer-logo">ITY</div>
-      <div class="footer-title">Imtiyaz</div>
-      <p>
-        Discover and collect extraordinary artwork pieces from talented artists worldwide. Each piece curated for authenticity and soul.
-      </p>
-      <div class="footer-social">
-        <span>🌐</span>
-        <span>🖼️</span>
-      </div>
-    </div>
-    <div class="footer-col quick-links">
-      <div class="footer-heading">Quick Links</div>
-      <a href="#">Gallery</a>
-      <a href="#">Commissions</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-      <a href="#">Commissions</a>
-    </div>
-    <div class="footer-col customer-service">
-      <div class="footer-heading">Customer Service</div>
-      <a href="#">Shipping & Returns</a>
-      <a href="#">How it works</a>
-      <a href="#">Refund Card</a>
-      <a href="#">Support</a>
-    </div>
-    <div class="footer-col stay-updated">
-      <div class="footer-heading">Stay Updated</div>
-      <p>Subscribe to our newsletter for exclusive offers, new collections, and special articles.</p>
-      <form>
-        <input type="email" placeholder="Enter your email" class="footer-email" />
-        <button class="footer-subscribe" type="submit">Subscribe</button>
-      </form>
-    </div>
-  </div>
-  <div class="footer-icons-row">
-    <div class="footer-icon-card">
-      <div class="footer-icon">🎨</div>
-      <div class="icon-title">Original Artwork</div>
-      <div class="icon-desc">Handcrafted pieces by real artists</div>
-    </div>
-    <div class="footer-icon-card">
-      <div class="footer-icon">🚚</div>
-      <div class="icon-title">Free Shipping</div>
-      <div class="icon-desc">Worldwide delivery available</div>
-    </div>
-    <div class="footer-icon-card">
-      <div class="footer-icon">🔒</div>
-      <div class="icon-title">Secure Payment</div>
-      <div class="icon-desc">100% safe transactions</div>
-    </div>
-    <div class="footer-icon-card">
-      <div class="footer-icon">↩️</div>
-      <div class="icon-title">Easy Returns</div>
-      <div class="icon-desc">14-day return policy</div>
-    </div>
-  </div>
-  <div class="footer-bottom">
-    <div class="footer-copy">
-      © 2025 ArtGallery & Imtiyaz | All rights reserved.
-    </div>
-    <div class="footer-links-bottom">
-      <a href="#">Privacy Policy</a> | 
-      <a href="#">Terms of Service</a>
-    </div>
-  </div>
-</footer>
+
+        <!-- Footer -->
+        <footer class="site-footer" id="contact">
+          <div class="footer-main">
+            <div class="footer-col brand-info">
+              <div class="footer-logo">ITY</div>
+              <div class="footer-title">I-ArtWorks by Imtiyaz</div>
+              <p>
+                Discover and collect extraordinary artwork pieces from talented artists worldwide. Each piece curated for authenticity and soul.
+              </p>
+              <div class="footer-social">
+                <a href="#" aria-label="Website">🌐</a>
+                <a href="#" aria-label="Instagram">📷</a>
+                <a href="#" aria-label="Facebook">📘</a>
+              </div>
+            </div>
+            <div class="footer-col quick-links">
+              <div class="footer-heading">Quick Links</div>
+              <a href="#gallery">Gallery</a>
+              <a href="#commissions">Commissions</a>
+              <a href="#about">About</a>
+              <a href="#contact">Contact</a>
+            </div>
+            <div class="footer-col customer-service">
+              <div class="footer-heading">Customer Service</div>
+              <a href="#shipping">Shipping & Returns</a>
+              <a href="#howto">How it works</a>
+              <a href="#faq">FAQ</a>
+              <a href="#support">Support</a>
+            </div>
+            <div class="footer-col stay-updated">
+              <div class="footer-heading">Stay Updated</div>
+              <p>Subscribe to our newsletter for exclusive offers, new collections, and special articles.</p>
+              <form id="newsletterForm" onsubmit="handleNewsletter(event)">
+                <input type="email" placeholder="Enter your email" class="footer-email" required />
+                <button class="footer-subscribe" type="submit">Subscribe</button>
+              </form>
+              <p id="newsletterMessage" class="newsletter-message"></p>
+            </div>
+          </div>
+          <div class="footer-icons-row">
+            <div class="footer-icon-card">
+              <div class="footer-icon">🎨</div>
+              <div class="icon-title">Original Artwork</div>
+              <div class="icon-desc">Handcrafted pieces by real artists</div>
+            </div>
+            <div class="footer-icon-card">
+              <div class="footer-icon">🚚</div>
+              <div class="icon-title">Free Shipping</div>
+              <div class="icon-desc">Worldwide delivery available</div>
+            </div>
+            <div class="footer-icon-card">
+              <div class="footer-icon">🔒</div>
+              <div class="icon-title">Secure Payment</div>
+              <div class="icon-desc">100% safe transactions</div>
+            </div>
+            <div class="footer-icon-card">
+              <div class="footer-icon">↩️</div>
+              <div class="footer-icon">✓</div>
+              <div class="icon-title">Easy Returns</div>
+              <div class="icon-desc">14-day return policy</div>
+            </div>
+          </div>
+          <div class="footer-bottom">
+            <div class="footer-copy">
+              © 2025 I-ArtWorks by Imtiyaz | All rights reserved.
+            </div>
+            <div class="footer-links-bottom">
+              <a href="#privacy">Privacy Policy</a> | 
+              <a href="#terms">Terms of Service</a>
+            </div>
+          </div>
+        </footer>
       </div>
    </main>
+
+   <!-- Modal for Commission Form -->
+   <div id="commissionModal" class="modal">
+     <div class="modal-content">
+       <span class="modal-close" onclick="closeCommissionModal()">&times;</span>
+       <h2>Commission Custom Artwork</h2>
+       <form id="commissionForm" onsubmit="handleCommission(event)">
+         <input type="text" placeholder="Your Name" required>
+         <input type="email" placeholder="Your Email" required>
+         <input type="tel" placeholder="Phone Number">
+         <select required>
+           <option value="">Select Art Style</option>
+           <option value="abstract">Abstract</option>
+           <option value="portrait">Portrait</option>
+           <option value="landscape">Landscape</option>
+           <option value="contemporary">Contemporary</option>
+         </select>
+         <select required>
+           <option value="">Select Size</option>
+           <option value="small">Small (12" x 16")</option>
+           <option value="medium">Medium (18" x 24")</option>
+           <option value="large">Large (24" x 36")</option>
+           <option value="custom">Custom Size</option>
+         </select>
+         <textarea placeholder="Describe your vision..." rows="5" required></textarea>
+         <button type="submit" class="submit-commission">Submit Request</button>
+       </form>
+     </div>
+   </div>
+
+   <!-- Preview Modal -->
+   <div id="previewModal" class="modal">
+     <div class="modal-content preview-content">
+       <span class="modal-close" onclick="closePreviewModal()">&times;</span>
+       <div id="previewBody"></div>
+     </div>
+   </div>
+
    <script src="data/artworks.js"></script>
    <script src="script/index.js"></script>
    <script src="script/bag.js"></script>
