Fix link to commissions page in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <nav class="nav_bar">
         <a href="#gallery">Gallery</a>
-        <a href="/pages/commission.html">Commissions</a>
+        <a href="pages/commission.html">Commissions</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
       </nav>
