--- a/pages/commission.html
+++ b/pages/commission.html
@@ -84,6 +84,26 @@
                <p class="form-subtitle">Tell us about your vision and we'll match you with the perfect artist</p>
             </div>
 
+            <!-- Quick WhatsApp Contact -->
+            <div class="quick-whatsapp-section">
+               <div class="quick-whatsapp-content">
+                  <div class="whatsapp-icon">
+                     <i class="fa-brands fa-whatsapp"></i>
+                  </div>
+                  <div class="whatsapp-info">
+                     <h4>Prefer to Chat Directly?</h4>
+                     <p>Get instant responses to your questions via WhatsApp</p>
+                  </div>
+                  <button type="button" class="btn-quick-whatsapp" onclick="quickWhatsAppInquiry()">
+                     <i class="fa-brands fa-whatsapp"></i> Chat Now
+                  </button>
+               </div>
+            </div>
+
+            <div class="form-divider">
+               <span>OR FILL THE FORM BELOW</span>
+            </div>
+
             <form id="commissionForm">
                <div class="form-section">
                   <h3 class="section-title">Personal Information</h3>
