--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         </a>
       </div>
    </header>
-   
 
    <!-- Hero Section -->
    <section class="hero-section">
@@ -171,6 +170,8 @@
             </div>
           </div>
         </section>
+
+        <!-- Commissions Section -->
 
 
         <!-- Footer -->
