--- a/pages/commission.html
+++ b/pages/commission.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Commission a custom portrait or artwork from talented artists. Personalized art that captures your memories.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="../css/commission.css">
+        <link rel="stylesheet" href="/css/wishlist.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 <body>
@@ -22,9 +23,10 @@
         <a href="../index.html#contact">Contact</a>
       </nav>
       <div class="action_bar">
-        <a class="action_container" href="#" id="wishlistBtn">
+ <a class="action_container" href="wishlist.html" id="wishlistBtn">
           <span class="material-symbols-outlined action_icon">favorite</span>
           <span class="action_name">Wishlist</span>
+          <span class="wishlist-badge">0</span>
         </a>
         <a class="action_container" href="#" id="profileBtn">
           <span class="material-symbols-outlined action_icon">person</span>
@@ -365,5 +367,6 @@ Examples:
    <script src="../data/artworks.js"></script>
    <script src="../script/index.js"></script>
    <script src="../script/commission.js"></script>
+   <script src="../script/wishlist.js"></script>
 </body>
 </html>
