--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>I-ArtWorks | Extraordinary Art Gallery</title>
   <meta name="description" content="Discover and collect extraordinary artwork from talented artists worldwide. Original pieces, free shipping, and authentic artist-verified collections.">
+  
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="./css/style.css">
-  <!-- Add Carousel CSS -->
-  <link rel="stylesheet" href="./css/carousel.css">
+  <link rel="stylesheet" href="./css/wishlist.css">
+  <link rel="stylesheet" href="/css/carousel.css">
+  <<link rel="stylesheet" href="./css/bag.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 
@@ -28,6 +31,7 @@
         <a class="action_container" href="#" id="wishlistBtn">
           <span class="material-symbols-outlined action_icon">favorite</span>
           <span class="action_name">Wishlist</span>
+          <span class="wishlist-badge">0</span>
         </a>
         <a class="action_container" href="#" id="profileBtn">
           <span class="material-symbols-outlined action_icon">person</span>
@@ -53,7 +57,7 @@
         <a href="#gallery" class="hero-button">Explore Collection</a>
       </div>
    </section>
-   
+
    <main>
       <div class="content">
         <div class="original">
@@ -83,13 +87,12 @@
           <div class="badge">🚚 Free Shipping <br><small>Worldwide delivery</small></div>
           <div class="badge">✔️ Artist Verified <br><small>Curated selection</small></div>
         </div>
-        
-   <!-- ⭐ NEW: Featured Carousel Section -->
-  <div></div>
+
+
+<!-- ⭐ NEW: Featured Carousel Section -->
         <section id="featuredCarousel" class="carousel-section">
           <!-- Carousel will be generated here by JavaScript -->
         </section>
-
 
         <!-- Preview Gallery Section -->
         <section class="gallery">
@@ -292,10 +295,12 @@
      </div>
    </div>
 
+   <!-- Scripts -->
    <script src="data/artworks.js"></script>
    <script src="script/index.js"></script>
    <script src="script/bag.js"></script>
-   <!-- Add Carousel JavaScript -->
+   <script src="script/wishlist.js"></script>
    <script src="script/carousel.js"></script>
+  
 </body>
 </html>
