--- a/pages/bag.html
+++ b/pages/bag.html
@@ -6,7 +6,7 @@
     <title>Shopping Bag - I-ArtWorks</title>
     <meta name="description" content="Review your selected artworks and complete your purchase.">
     <link rel="stylesheet" href="../css/bag.css"/>
-    <link rel="stylesheet" href="/css/wishlist.css">
+    <link rel="stylesheet" href="../css/wishlist.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -17,10 +17,10 @@
         <a href="/index.html"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="I-ArtWorks"></a>
       </div>
       <nav class="nav_bar">
-        <a href="#gallery">Gallery</a>
-        <a href="pages/commission.html">Commissions</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+                <a href="../index.html#gallery">Gallery</a>
+        <a href="../pages/commission.html" class="active">Commissions</a>
+        <a href="../index.html#about">About</a>
+        <a href="../index.html#contact">Contact</a>
       </nav>
       <div class="action_bar">
         <a class="action_container" href="wishlist.html" id="wishlistBtn">
