--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/wishlist.css">
   <link rel="stylesheet" href="./css/carousel.css">
-  <<link rel="stylesheet" href="./css/bag.css">
+  <link rel="stylesheet" href="./css/bag.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 
