--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./css/wishlist.css">
   <link rel="stylesheet" href="./css/carousel.css">
   <link rel="stylesheet" href="./css/bag.css">
+  <link rel="stylesheet" href="./css/auth.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 
@@ -301,6 +302,7 @@
    <script src="script/bag.js"></script>
    <script src="script/wishlist.js"></script>
    <script src="script/carousel.js"></script>
+   <script src="script/auth.js"></script>
   
 </body>
 </html>
