--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>I-ArtWorks | Extraordinary Art Gallery</title>
   <meta name="description" content="Discover and collect extraordinary artwork from talented artists worldwide. Original pieces, free shipping, and authentic artist-verified collections.">
   <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/style-premium.css">
   <!-- Add Carousel CSS -->
   <link rel="stylesheet" href="./css/carousel.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
