--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-   <!-- Header -->
+   <!-- Headeer -->
    <header>
       <div class="logo_container">
         <a href="#"><img class="Imax_home" src="/I-ArtWorks/images/logo.png" alt="I-ArtWorks"></a>
