--- a/pages/bag.html
+++ b/pages/bag.html
@@ -6,6 +6,7 @@
     <title>Shopping Bag - I-ArtWorks</title>
     <meta name="description" content="Review your selected artworks and complete your purchase.">
     <link rel="stylesheet" href="../css/bag.css"/>
+        <link rel="stylesheet" href="./css/style-premium.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
